--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -56,7 +56,7 @@
 
 .chat {
   background-color: #ffffff;
-  width: calc(100% - 300px);
+  width: calc(100vw - 300px);
 }
 
 .chat-header {
@@ -117,7 +117,7 @@
   color: #434a54;
   font-size: 14px;
   margin-bottom: 40px;
-}
+}t
 
 .form {
   background-color: #DDDDDD;
